# homecam-api

./: .env.example  Dockerfile  README.md  SERVER_DEPLOYMENT.md  build-and-push.sh  docker-compose.yml  find_camera.py  pyproject.toml
app/: core.py  log.py  main.py  settings.py
app/api/: __init__.py  auth.py  camera.py  health.py
app/exceptions/: __init__.py  base.py  camera.py  handlers.py
app/models/: __init__.py
app/models/api/: __init__.py  auth.py  base.py  camera.py  health.py
app/models/db/: __init__.py
app/operations/: __init__.py  auth_ops.py  camera_ops.py
deploy/: GITHUB_RUNNER_SETUP.md  README_CICD.md  UBUNTU_DEPLOYMENT.md  build-and-push.sh  deploy-server.sh  setup-nginx-ssl.sh  setup-runner.sh
docs/: ADMIN_SETUP.md  DOCKER_CLERK_FIX.md  README.md
docs/analysis/: code_analysis_summary.md
docs/auth/: clerk_jwt_analysis.md  token_comparison_analysis.md
templates/: index.html
