[project]
name = "homecam-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "jinja2>=3.1.6",
    "opencv-python-headless>=4.11.0.86",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
