[project]
name = "homecam-api"
version = "0.1.0"
description = "Home camera streaming API with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "opencv-python-headless>=4.8.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "python-jose>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
